opam-version: "2.0"
version: "1.0"
maintainer: "ilya.sergey@yale-nus.edu.sc"
homepage: "https://ilyasergey.net/YSC2229/"
dev-repo: "git://github.com:ysc2229/library.git"
bug-reports: "https://github.com/ysc2229/library/issues"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

install: [ make ]
depends: [ ]

description: "Libraries and examples for the Yale-NUS College module on Introductory Data Structures and Algorithms (YSC2229)"

tags: [
  "category:Computer Science/Education/Basic Algorithms and Data Structures"
  "keyword:data structures"
  "keyword:algorithms"
]

authors: [
  "Ilya Sergey <ilya.sergey@yale-nus.edu.sg>"
]

